# profile.mobile.platform.core.uifw.efl-modules

atspi_output/: Makefile.am  configure.ac
atspi_output/src/: .mod.c.swo  .mod.c.swp  Makefile.am  mod.c
datetime_input_spinner/: Makefile.am  autogen.sh  configure.ac  datetime_input_spinner.c
datetime_input_spinner/m4/: ChangeLog
datetime_input_spinner/po/: ChangeLog  LINGUAS~  Makevars  POTFILES.in  en_US.po  en_US.po~
edje_feedback/: Makefile.am  autogen.sh  configure.ac  feedback.c
packaging/: efl-modules.spec  elm-modules.spec
